--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+.slider-container{
+  max-width: 600px;
+  max-height: 800px;
+  margin: 0px auto;
+  box-shadow: 0px 0px 100px #f7f7f7;
+}
+.wrapper{
+  background: linear-gradient(rgb(41, 175, 81), rgb(19, 64, 160));
+  background-repeat: no-repeat;
+  min-width: 1360px;
+  min-height: 720px;
+}
+.header{
+
+  margin-bottom: 100px;
+}
+.__anime{
+  
+  background: linear-gradient(rgb(89, 102, 93), rgb(19, 161, 142));
+}
+.btn-primary{
+  
+  background: linear-gradient(rgb(142, 143, 142), rgb(55, 80, 136));
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.body-anime{
+  display:flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+}
+.mark-anime,.mark-cartons{
+
+  color:#f1f8f7;
+  padding-left: 130px;
+
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.__dorams{
+  background: linear-gradient(rgb(89, 102, 93), rgb(141, 199, 7));
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.__different{
+  background: linear-gradient(rgb(89, 102, 93), rgb(49, 46, 202));
+  max-width: 380px;
+}
+.__serials{
+  background: linear-gradient(rgb(89, 102, 93), rgb(54, 134, 30));
+  max-width: 380px;
+}
+.__sweets{
+  background: linear-gradient(rgb(89, 102, 93), rgb(161, 125, 4));
+  max-width: 380px;
+}
+
+.different,.serials,.sweets,.anime,.Cartons{
+
+  padding: 100px;
+}
+img{
+ /* object-fit:cover;
+  background-size: cover;
+  background-repeat: no-repeat;*/
+}
+
+.different-item{
+  
+  display:flex;
+  flex-shrink: 2;
+
 }
